--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "keywords": [],
   "author": "Fatih Yavuz",
-  "license": "ISC",
+  "license": "WTFPL",
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "css-loader": "^4.3.0",
